--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
 			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">O nás</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">Onás</a>
 			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
 			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
 		</div>
@@ -60,8 +60,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Vitajte! Toto je stránka WebServis©</span></h1>
-			<h2> <span class="w3-hover-blue"><i>"Robíme webové poradenstvo s láskou!"</i></span></h2>
-			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="564" height="300">
+			<h2> <span class="w3-hover-blue"><b>Robíme webové poradenstvo s láskou!</b></span></h2>
+			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="500" height="300">
 		</header>
 
 		<!-- About Section -->
