--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="sk">
-<title>Webservis©</title>
+<title>WebServis©</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -46,7 +46,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 	<!-- Navbar on small screens (Hidden on medium and large screens) -->
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
+		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-xxlarge ">
 			<a href="#Domov" class="w3-bar-item w3-button" style="width:45% !important">Domov</a>
 			<a href="#Onás" class="w3-bar-item w3-button" style="width:45% !important">Onás</a>
 			<a href="#Fotky" class="w3-bar-item w3-button" style="width:45% !important">Fotky</a>
@@ -65,7 +65,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		</header>
 
 		<!-- About Section -->
-		<div class="w3-content w3-justify w3-text-grey w3-padding-104" id="Onás">
+		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Onás">
 			<h2 class="w3-text-light-blue">O nás</h2>
 			<h style="width:200px" class="w3-opacity">
 			    <b>Ahojte ľudia!</b><br>
