--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 	<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%"  height="120">
-		<a href="#Domov" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
+		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%"  height="110">
+		<a href="#Domov" class="w3-bar-item w3-button w3-padding-small  w3-text-light-blue">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Domov</p>
   </a>
@@ -47,10 +47,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<!-- Navbar on small screens (Hidden on medium and large screens) -->
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-xxlarge ">
-			<a href="#Domov" class="w3-bar-item w3-button" style="width:45% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:45% !important">Onás</a>
-			<a href="#Fotky" class="w3-bar-item w3-button" style="width:45% !important">Fotky</a>
-			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:45% !important">Kontakt</a>
+			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">Onás</a>
+			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
+			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
 		</div>
 	</div>
 
