--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	<!-- Navbar on small screens (Hidden on medium and large screens) -->
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
-			<a href="#Domov" class="w3-bar-item w3-button" style="width:35% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:35% !important">Onás</a>
-			<a href="#Fotky" class="w3-bar-item w3-button" style="width:35% !important">Fotky</a>
-			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:35% !important">Kontakt</a>
+			<a href="#Domov" class="w3-bar-item w3-button" style="width:30% !important">Domov</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:30% !important">Onás</a>
+			<a href="#Fotky" class="w3-bar-item w3-button" style="width:30% !important">Fotky</a>
+			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:30% !important">Kontakt</a>
 		</div>
 	</div>
 
@@ -59,15 +59,15 @@
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
-			<h1 class="w3-jumbo"><span class="w3-hide-small">Vitajte na stránke WebServis©!</span></h1>
+			<h1 class="w3-jumbo"><span class="w3-hide-small">Vitajte na stránke WebServis©</span></h1>
 			<h2> <span class="w3-hover-blue"><b>My robíme webové poradenstvo s láskou!</b></span></h2>
-			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle-right w3-margin-right" style="width:80%" width="375" height="250">
+			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle-right w3-margin-right" style="width:65%" width="560" height="250">
 		</header>
 
 		<!-- About Section -->
 		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Onás">
 			<h2 class="w3-text-light-blue">O nás</h2>
-			<h style="width:200px" class="w3-opacity">
+			<hr style="width:200px" class="w3-opacity">
 				<b>Ahojte ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
@@ -78,7 +78,7 @@
 				<div class="w3-white">
 					<div class="w3-light-blue" style="height:28px;width:85%"></div>
 				</div>
-				<p class="w3-wide">Web Dizajn</p>
+				<p class="w3-wide">Web dizajn</p>
 				<div class="w3-white">
 					<div class="w3-light-blue" style="height:28px;width:95%"></div>
 				</div>
