--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	<!-- Navbar on small screens (Hidden on medium and large screens) -->
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
-			<a href="#Domov" class="w3-bar-item w3-button" style="width:30% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:30% !important">Onás</a>
-			<a href="#Fotky" class="w3-bar-item w3-button" style="width:30% !important">Fotky</a>
-			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:30% !important">Kontakt</a>
+			<a href="#Domov" class="w3-bar-item w3-button" style="width:28% !important">Domov</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:28% !important">Onás</a>
+			<a href="#Fotky" class="w3-bar-item w3-button" style="width:28% !important">Fotky</a>
+			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:28% !important">Kontakt</a>
 		</div>
 	</div>
 
@@ -190,16 +190,16 @@
 		</div>
 
 		<!-- Contact Section -->
-		<div class="w3-padding-64 w3-content  w3-text-blue-gray-grey" id="Kontakt">
+		<div class="w3-padding-64 w3-content  w3-text-blue-grey" id="Kontakt">
 			<h2 class=" w3-text-light-blue">Napíš mi</h2>
 			<hr style="width:200px" class="w3-opacity">
 
 			<div class="w3-section">
-				<p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Košice, Svk</p>
-				<p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +421556711924</p>
-				<p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
+				<p><i class="fa fa-map-marker fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Košice, SVK</p>
+				<p><i class="fa fa-phone fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Telefón: +421556711924</p>
+				<p><i class="fa fa-envelope fa-fw w3-text-grey w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
 			</div><br>
-			<p>Napíšte otázku a odošlite odkaz:</p><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
+			<p style=" w3-content  w3-text-blue-grey">Napíšte mi otázku a odošlite</p><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
 
 			<form action="/action_page.php" target="_blank">
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
