--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<p><i class="fa fa-phone fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Telefón: +421556711924</p>
 				<p><i class="fa fa-envelope fa-fw w3-text-grey w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
 			</div><br>
-			<p style=" w3-content  w3-text-blue-grey">Napíšte mi otázku a odošlite</p><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
+			<p style=" w3-content  w3-text-blue w3-xlarge">Napíšte mi otázku a odošlite</p><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
 
 			<form action="/action_page.php" target="_blank">
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
@@ -217,14 +217,14 @@
 		</div>
 
 		<!-- Footer -->
-		<footer class="w3-content w3-padding-64  w3-text-light-blue w3-xlarge">
+		<footer class="w3-content w3-padding-64  w3-text-grey w3-xlarge">
 			<i class="fa fa-facebook-official w3-hover-opacity"></i>
 			<i class="fa fa-instagram w3-hover-opacity"></i>
 			<i class="fa fa-snapchat w3-hover-opacity"></i>
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<p class="w3-medium">Powered by V.K.&amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom</a><br><a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">Pozri aj na W3Schools.Uč sa základy tvorenia webov.</a>
+			<p class="w3-medium">Powered by V.K.&amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom</a>                       <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">Pozri aj na W3Schools.Uč sa základy tvorenia webov.</a>
 				<!-- End footer -->
 		</footer>
 
